--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,6 +52,7 @@ header {
   box-shadow: 0px 3px 5px #888;
   display: flex;
   justify-content: space-between;
+  z-index: 1;
 }
 
 .page {
@@ -290,7 +291,7 @@ nav a {
   }
 
   .wrapper {
-    width: calc(100vw - 240px);
+    width: 100%;
   }
 
   .logo {
@@ -299,6 +300,7 @@ nav a {
 
   .side {
     width: 240px;
+    position: absolute;
   }
 
   .container {
