--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -143,13 +143,13 @@ input[type="text"] {
   border: 1px solid #ddd;
   border-radius: 5px;
   height: 35px;
-  width: 20vw;
+  width: 400px;
   padding-left: 5px;
 }
 
 input[name="color"] {
   display: inline;
-  width: calc(20vw - 36px);
+  width: calc(400px - 36px);
   border-right:none;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
@@ -177,7 +177,7 @@ select {
   border: 1px solid #ddd;
   border-radius: 5px;
   height: 35px;
-  width: 20vw;
+  width: 400px;
   padding-left: 5px;
 }
 
@@ -309,5 +309,21 @@ nav a {
 
   .table-wrapper {
     overflow-x: scroll;
+  }
+
+  h3 {
+    text-align: center;
+    line-height: 1.2rem;
+  }
+
+}
+
+@media only screen and (max-width: 480px){
+  input[type="text"], select {
+    width: 100%;
+  }
+
+  input[name="color"]{
+    width: calc(100% - 36px)
   }
 }
